...
                            <constraint firstItem="N4z-hW-kkC" firstAttribute="top" secondItem="bOL-0Z-oMS" secondAttribute="top" id="apF-O2-kEf"/>
                            <constraint firstItem="bOL-0Z-oMS" firstAttribute="bottom" secondItem="N4z-hW-kkC" secondAttribute="bottom" id="qof-hU-PLE"/>
                            <constraint firstItem="bOL-0Z-oMS" firstAttribute="trailing" secondItem="N4z-hW-kkC" secondAttribute="trailing" id="v46-E1-LR5"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="bOL-0Z-oMS"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="ホーム" image="icons8-Home" id="bHF-hF-XJP"/>
                    <connections>
                        <outlet property="webView" destination="N4z-hW-kkC" id="hHG-bE-2Qw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="WAa-Be-7aU" firstAttribute="bottom" secondItem="rDR-iT-QW1" secondAttribute="bottom" id="p0f-BP-Qzm"/>
                            <constraint firstItem="rDR-iT-QW1" firstAttribute="leading" secondItem="WAa-Be-7aU" secondAttribute="leading" id="qEx-Ox-NLq"/>
                            <constraint firstItem="WAa-Be-7aU" firstAttribute="top" secondItem="rDR-iT-QW1" secondAttribute="top" id="zpe-Fr-Are"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="WAa-Be-7aU"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="新着" image="icons8-New" id="Ja5-9n-j5i"/>
                    <connections>
                        <outlet property="webView" destination="rDR-iT-QW1" id="idV-6t-4LC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ghw-1h-Rpy" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="XG5-fb-8ID" id="k3V-oJ-ugy"/>
                            <outlet property="delegate" destination="XG5-fb-8ID" id="ntp-Ap-3hL"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="お知らせ" image="icons8-Notification" id="OJY-Vw-jRa"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="axc-cP-MYp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1780" y="1370"/>
        </scene>
        <!--お気に入り-->
...
                            <constraint firstItem="8ti-UF-7Ly" firstAttribute="trailing" secondItem="V1Z-NZ-DfU" secondAttribute="trailing" id="iAt-Hw-SvN"/>
                            <constraint firstItem="V1Z-NZ-DfU" firstAttribute="leading" secondItem="8ti-UF-7Ly" secondAttribute="leading" id="qhH-Ja-C4v"/>
                            <constraint firstItem="8ti-UF-7Ly" firstAttribute="trailing" secondItem="V1Z-NZ-DfU" secondAttribute="trailing" id="vUi-Uz-cVw"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="8ti-UF-7Ly"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="検索" image="icons8-Search" id="5H0-Ro-her"/>
                    <connections>
                        <outlet property="webView" destination="V1Z-NZ-DfU" id="VnU-pD-B3Y"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Pgg-bq-AC5" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
